--- a/app/src/main/res/layout-sw600dp/fragment_list_bought.xml
+++ b/app/src/main/res/layout-sw600dp/fragment_list_bought.xml
@@ -52,17 +52,12 @@
                     android:layout_weight="1"
                     android:text="@string/money_hint"
                     android:textAlignment="textEnd" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
 
                 <TextView
                     android:id="@+id/lbPendingToPayList"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
                     android:layout_weight="1"
                     android:text="@string/pending_to_pay_short" />
 
@@ -91,9 +86,17 @@
                     android:textAlignment="textEnd" />
             </LinearLayout>
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+            </LinearLayout>
+
             <ScrollView
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                android:layout_marginTop="20dp">
 
                 <LinearLayout
                     android:layout_width="match_parent"
