--- a/app/src/main/res/layout/buys_credit_card.xml
+++ b/app/src/main/res/layout/buys_credit_card.xml
@@ -5,10 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_gravity="center_vertical"
-    android:layout_marginLeft="10dp"
-    android:layout_marginTop="10dp"
-    android:layout_marginRight="10dp"
-    android:layout_marginBottom="10dp"
+    android:layout_margin="@dimen/margin_border_layout"
     android:orientation="vertical">
 
     <TextView
@@ -104,11 +101,10 @@
         android:id="@+id/linerLayoutValues"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
         android:layout_marginTop="1dp"
-        tools:layout_editor_absoluteX="1dp"
+        android:orientation="horizontal"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
-        >
+        tools:layout_editor_absoluteX="1dp">
 
         <TextView
             android:id="@+id/lProductValue"
