--- a/app/src/main/res/values-w600dp/dimens.xml
+++ b/app/src/main/res/values-w600dp/dimens.xml
@@ -1,3 +1,10 @@
 <resources>
-    <dimen name="fab_margin">48dp</dimen>
+    <dimen name="fab_margin">88dp</dimen>
+    <dimen name="activity_horizontal_margin">80dp</dimen>
+    <dimen name="activity_vertical_margin">20dp</dimen>
+    <dimen name="header_left_padding">40dp</dimen>
+    <dimen name="header_height">400dp</dimen>
+    <dimen name="perfil_image_size">70dp</dimen>
+    <dimen name="margin_border_layout">40dp</dimen>
+
 </resources>
