--- a/app/src/main/res/layout/fragment_list_credit_card.xml
+++ b/app/src/main/res/layout/fragment_list_credit_card.xml
@@ -5,7 +5,7 @@
     android:id="@+id/frameLayout2"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_margin="10dp"
+    android:layout_margin="@dimen/margin_border_layout"
     tools:context=".controller.ListCreditCard">
 
     <!-- TODO: Update blank fragment layout -->
