--- a/app/src/main/res/layout/fragment_taxes.xml
+++ b/app/src/main/res/layout/fragment_taxes.xml
@@ -5,7 +5,7 @@
     android:id="@+id/frameLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_margin="10dp"
+    android:layout_margin="@dimen/margin_border_layout"
     android:layout_marginRight="10dp"
     tools:context=".controller.Taxes">
 
