--- a/app/src/main/res/values-land/dimens.xml
+++ b/app/src/main/res/values-land/dimens.xml
@@ -1,4 +1,5 @@
 <resources>
     <dimen name="fab_margin">48dp</dimen>
     <dimen name="margin_border_layout">10dp</dimen>
+    <dimen name="open_menu">0dp</dimen>
 </resources>
