--- a/app/src/main/res/values-night-v31/themes.xml
+++ b/app/src/main/res/values-night-v31/themes.xml
@@ -1,5 +1,6 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <!-- Base application theme. -->
+
     <style name="Theme.myapplication" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/green_background_dark</item>
@@ -9,7 +10,7 @@
         <!-- Secondary brand color. -->
         <!--<item name="android:textColor">@color/white</item>-->
         <!--<item name="android:editTextBackground">@null</item>-->
-        <item name="android:textColorHint">@color/green_background_dark </item>
+        <item name="android:textColorHint">@color/green_background_dark</item>
         <item name="android:colorBackground">@color/black</item>
         <item name="android:colorControlActivated">@color/green_background</item>
         <item name="colorSecondary">@color/green_background</item>
@@ -18,6 +19,9 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
-
+        <item name="android:windowSplashScreenBackground">@color/green_background</item>
+        <item name="android:windowSplashScreenAnimatedIcon">@drawable/finanza_logo</item>
+        <item name="android:windowSplashScreenIconBackgroundColor">@color/green_background_dark</item>
+        <item name="android:windowSplashScreenBrandingImage">@drawable/ic_sum</item>
     </style>
 </resources>
