--- a/app/src/main/res/values-v31/themes.xml
+++ b/app/src/main/res/values-v31/themes.xml
@@ -1,5 +1,6 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <!-- Base application theme. -->
+
     <style name="Theme.myapplication" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/green_background</item>
@@ -13,20 +14,10 @@
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
 
         <!-- Customize your theme here. -->
-        <item name="windowSplashScreenBackground">@color/green_background</item>
-        <item name="windowSplashScreenAnimatedIcon">@drawable/finanza_logo</item>
-        <item name="windowSplashScreenIconBackgroundColor">@color/green_background_dark
+        <item name="android:windowSplashScreenBackground">@color/green_background</item>
+        <item name="android:windowSplashScreenAnimatedIcon">@drawable/finanza_logo</item>
+        <item name="android:windowSplashScreenIconBackgroundColor">@color/green_background_dark
         </item>
+        <item name="android:windowSplashScreenBrandingImage">@drawable/ic_sum</item>
     </style>
-
-    <style name="Theme.myapplication.NoActionBar">
-        <item name="windowActionBar">false</item>
-        <item name="windowNoTitle">true</item>
-    </style>
-
-    <style name="Theme.myapplication.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
-
-    <style name="Theme.myapplication.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
-
-
 </resources>
