--- a/app/src/main/res/values-w600dp/dimens.xml
+++ b/app/src/main/res/values-w600dp/dimens.xml
@@ -6,5 +6,6 @@
     <dimen name="header_height">400dp</dimen>
     <dimen name="perfil_image_size">70dp</dimen>
     <dimen name="margin_border_layout">40dp</dimen>
+    <dimen name="open_menu">1dp</dimen>
 
 </resources>
