--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -2,5 +2,19 @@
 <resources>
     <style name="GreenTex" parent="TextAppearance.AppCompat">
         <item name="android:textColor">#00FF00</item>
+        <item name="windowSplashScreenBackground">@color/green_background</item>
+        <item name="windowSplashScreenAnimatedIcon">@drawable/finanza_logo</item>
+        <item name="windowSplashScreenIconBackgroundColor">@color/green_background_dark
+        </item>
+    </style>
+    <style name="Theme.App.Starting" parent="Theme.SplashScreen">
+        <item name="windowSplashScreenBackground">@color/green_background</item>
+        <item name="windowSplashScreenAnimatedIcon">@mipmap/ic_finanzas_foreground</item>
+        <item name="windowSplashScreenIconBackgroundColor">@color/green_background_dark
+        </item>
+        <!-- requero para aplicar el spash y aplicar el estilo de la aplicacino si no lo tiene falla-->
+        <item name="postSplashScreenTheme">@style/Theme.myapplication</item>
+
+
     </style>
 </resources>
