se agrega la nueva pagina para ver los registros guardados
Signed-off-by: alejandro parra <alejandroparral@gmail.com>

--- a/app/src/main/res/layout/drawable.xml
+++ b/app/src/main/res/layout/drawable.xml
@@ -18,12 +18,14 @@
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"/>
 
-        <FrameLayout
-            android:id="@+id/fragment_initial"
-
+        <androidx.fragment.app.FragmentContainerView
+            android:id="@+id/nav_host_fragment"
+            android:name="androidx.navigation.fragment.NavHostFragment"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-                        />
+            android:layout_weight="4"
+            app:defaultNavHost="true"
+            app:navGraph="@navigation/nav_graph" />
 
 
     </LinearLayout>
