--- a/app/src/main/res/layout-land/bought_item_list.xml
+++ b/app/src/main/res/layout-land/bought_item_list.xml
@@ -4,9 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginLeft="50dp"
-    android:layout_marginTop="25dp"
-    android:layout_marginRight="50dp"
+    android:layout_marginBottom="10dp"
     android:background="?attr/colorPrimary"
     android:orientation="vertical"
     android:paddingLeft="5dp"
@@ -30,7 +28,7 @@
             android:layout_gravity="center_vertical"
             android:layout_weight="1"
             android:text="@string/date_hint"
-            android:textAlignment="viewStart"
+
             android:textColor="@android:color/primary_text_dark"
             android:textSize="18sp"
             android:textStyle="bold" />
@@ -45,6 +43,35 @@
             android:textColor="@android:color/primary_text_dark"
             android:textSize="18sp"
             android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/tvCutOffDayICC"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="10dp"
+            android:layout_weight="0"
+            android:text="@string/months_number_hint"
+            android:textAlignment="textEnd"
+            android:textColor="@android:color/primary_text_dark"
+            android:textStyle="italic" />
+
+        <TextView
+            android:id="@+id/textView4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="5dp"
+            android:layout_weight="0"
+            android:text="/" />
+
+        <TextView
+            android:id="@+id/tvStatusICC"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="0"
+            android:text="@string/months_number_hint"
+            android:textAlignment="textEnd"
+            android:textColor="@android:color/primary_text_dark"
+            android:textStyle="italic" />
 
         <ImageButton
             android:id="@+id/btnDeleteItemTCC"
@@ -90,96 +117,12 @@
             android:textAlignment="textEnd"
             android:textColor="@android:color/primary_text_dark"
             android:textStyle="italic" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/llQuotesBought"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintTop_toBottomOf="@+id/llProductValueBought"
-        tools:layout_editor_absoluteX="1dp">
-
-        <TextView
-            android:id="@+id/lbCutOffDayItemCC"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="@string/quote_bought"
-            android:textColor="@android:color/primary_text_dark"
-            android:textStyle="bold" />
-
-        <TextView
-            android:id="@+id/tvCutOffDayICC"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="10dp"
-            android:layout_weight="1"
-            android:text="@string/months_number_hint"
-            android:textAlignment="textEnd"
-            android:textColor="@android:color/primary_text_dark"
-            android:textStyle="italic" />
-
-        <TextView
-            android:id="@+id/lbStatusICC"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="@string/months"
-            android:textColor="@android:color/primary_text_dark"
-            android:textStyle="bold" />
-
-        <TextView
-            android:id="@+id/tvStatusICC"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="@string/months_number_hint"
-            android:textAlignment="textEnd"
-            android:textColor="@android:color/primary_text_dark"
-            android:textStyle="italic" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/llPendingToPay"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintTop_toBottomOf="@+id/llQuotesBought"
-        tools:layout_editor_absoluteX="5dp">
-
-        <TextView
-            android:id="@+id/lbPendingToPay"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="@string/pending_to_pay"
-            android:textColor="@android:color/primary_text_dark"
-            android:textStyle="bold" />
-
-        <TextView
-            android:id="@+id/tvPendingToPay"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="@string/money_hint"
-            android:textAlignment="textEnd"
-            android:textColor="@android:color/primary_text_dark" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/llTaxBoughtICC"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintTop_toBottomOf="@+id/llPendingToPay"
-        tools:layout_editor_absoluteX="5dp"
-        tools:layout_editor_absoluteY="5dp">
 
         <TextView
             android:id="@+id/lbTaxBoughtICC"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="5dp"
             android:layout_weight="1"
             android:text="@string/tax"
             android:textColor="@android:color/primary_text_dark"
@@ -193,6 +136,36 @@
             android:text="@string/interest_value_hint"
             android:textAlignment="textEnd"
             android:textColor="@android:color/primary_text_dark" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/llQuotesBought"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintTop_toBottomOf="@+id/llProductValueBought"
+        tools:layout_editor_absoluteX="1dp"/>
+
+    <LinearLayout
+        android:id="@+id/llPendingToPay"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintTop_toBottomOf="@+id/llQuotesBought"
+        tools:layout_editor_absoluteX="5dp">
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/llTaxBoughtICC"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintTop_toBottomOf="@+id/llPendingToPay"
+        tools:layout_editor_absoluteX="5dp"
+        tools:layout_editor_absoluteY="5dp">
+
     </LinearLayout>
 
     <LinearLayout
@@ -220,20 +193,12 @@
             android:text="@string/money_hint"
             android:textAlignment="textEnd"
             android:textColor="@android:color/primary_text_dark" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/llInterestBought"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintTop_toBottomOf="@+id/llCapitalBought"
-        tools:layout_editor_absoluteX="5dp">
 
         <TextView
             android:id="@+id/lbInterestBought"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="5dp"
             android:layout_weight="1"
             android:text="@string/interest_value"
             android:textColor="@android:color/primary_text_dark"
@@ -250,6 +215,16 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/llInterestBought"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintTop_toBottomOf="@+id/llCapitalBought"
+        tools:layout_editor_absoluteX="5dp">
+
+    </LinearLayout>
+
+    <LinearLayout
         android:id="@+id/llTotalQuoteBought"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -258,9 +233,28 @@
         tools:layout_editor_absoluteX="1dp">
 
         <TextView
+            android:id="@+id/lbPendingToPay"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/pending_to_pay"
+            android:textColor="@android:color/primary_text_dark"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/tvPendingToPay"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/money_hint"
+            android:textAlignment="textEnd"
+            android:textColor="@android:color/primary_text_dark" />
+
+        <TextView
             android:id="@+id/lbTotalQuoteBought"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="5dp"
             android:layout_weight="1"
             android:text="@string/quote_credit"
             android:textColor="@android:color/primary_text_dark"
@@ -284,10 +278,6 @@
         android:orientation="vertical"
         app:layout_constraintGuide_begin="20dp" />
 
-    <androidx.constraintlayout.helper.widget.Layer
-        android:id="@+id/layer"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline3"
